# HotdogMLopsProject

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Readme.md  dataset.dvc  infer.py  pyproject.toml  train.py  trained_model.pt.dvc
.dvc/: config
config/: config.yaml
config/experiment/: base_experiment.yaml
config/experiment/model/: sqnet_preproc_base.yaml
config/experiment/preprocessing/: sqnet.yaml
config/model/: sqnet_preproc_base.yaml
config/preprocessing/: sqnet.yaml
hotdog_mlops/: data.py  inference.py  model.py  trainer.py  transform.py  utils.py
